[project]
name = "localdiffusion"
version = "0.1.0"
description = "Local Stable Diffusion pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch @ https://download.pytorch.org/whl/cu118/torch-2.1.0%2Bcu118-cp310-cp310-win_amd64.whl",
    "torchvision @ https://download.pytorch.org/whl/cu118/torchvision-0.16.0%2Bcu118-cp310-cp310-win_amd64.whl",
    "torchaudio @ https://download.pytorch.org/whl/cu118/torchaudio-2.1.0%2Bcu118-cp310-cp310-win_amd64.whl",
    "transformers==4.35.2",
    "diffusers==0.24.0",
    "accelerate==0.25.0",
    "safetensors==0.4.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
