[project]
name = "localdiffusion"
version = "0.1.0"
description = "Local Stable Diffusion pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==0.25.0",
    "defusedxml==0.7.1",
    "diffusers==0.24.0",
    "huggingface-hub==0.19.4",
    "jsonschema-specifications==2025.4.1",
    "jupyter>=1.1.1",
    "notebook>=7.4.5",
    "numpy==2.1.2",
    "pillow>=11.0.0",
    "tokenizers==0.15.2",
    "torch==2.7.1+cu118",
    "torchaudio==2.7.1+cu118",
    "torchvision==0.22.1+cu118",
    "tqdm>=4.67.1",
    "transformers==4.35.2"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"